2007-04-03    <tino@firebird.03.softkill.net>

	* sleep.h (tino_nanosleep, tino_sleep, tino_msleep, tino_usleep) 
	(tino_yield, tino_halt, tino_relax): added

2007-04-02    <tino@firebird.03.softkill.net>

	* getopt.h (TINO_GETOPT_SUFFIX, TINO_GETOPT_IGNERR)
	(TINO_GETOPT_TIMESPEC): added
	(tino_getopt_var_set_arg_imp): added suffix, timespec and ignore
	numeric error

	* alarm.h (tino_alarm_handler): buglet: Always re-issue alarms
	after one second again.  This is because alarms can go off before
	syscalls, in which case no EINTR is issued, such that the syscall
	would not be interrupted by SIGALRM.
	(tino_alarm_set): Special case: If callback is NULL, the
	user-pointer is defining if the alarm is a one shot (not NULL) or
	continously running (user=NULL).  This can be used to generate
	regular EINTR events.  (Actually implemented in tino_alarm_run())
	(tino_alarm_sort): improved sorting
	(tino_alarm_run): improvment when time warps backward
	(tino_alarm_stop_all): added
	(tino_alarm_stop, tino_alarm_set): changed to better suit needs

2007-03-26    <tino@firebird.03.softkill.net>

	* log.h (tino_log_file): corrected to use tino_file_realpath()

	* filetool.h (tino_file_dirfileoffset): descriptive comment added
	(tino_file_is_rooted): added
	(tino_file_getcwd_buf, tino_file_getcwd): added.  This is in
	filetool.h as it need tino_alloc().  Peraps it will be moved into
	file.h later (which is compatible to old includes, as filetool.h
	includes file.h).
	(tino_file_realpath_buf): formerly known as tino_file_realpath
	(tino_file_realpath): added
	(tino_file_realpath_cwd): my own realpath() evaluation added.

2007-03-03    <tino@firebird.03.softkill.net>

	* getopt.h (tino_getopt_var_set_arg_imp): MIN and MAX handling for
	TINO_GETOPT_FLAG added
	(tino_getopt_parse): structural changes (direct return instead
	setting pos=-1), now returns below -1, too.
	(tino_getopt_var_print): removed as it already was commented out
	and of no use